# Socia-Research

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: deploy-dashboard.yml  deploy.yml
cloudflare/: ADMIN_GUIDE.md  DEPLOY.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare/migrations/: 0001_initial.sql  0002_settings.sql  0003_new_fields.sql  0004_cron_hours.sql
cloudflare/src/: browser.ts  db.ts  detect.ts  index.ts  landing.ts  stealth.ts  types.ts
config/: settings.yaml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/components/: badge.tsx  empty-state.tsx  login-gate.tsx  page-header.tsx  score-bar.tsx  sidebar.tsx  toast.tsx
dashboard/lib/: api.ts  auth.tsx  source-parser.ts  types.ts  utils.ts
docs/: 00_MASTER_PROMPT.md  landing.html
nitter/: README.md  docker-compose.yml  nitter.conf  start.sh
src/: main.py
src/admin/: app.py  deps.py
src/config/: constants.py  settings.py
src/connectors/: base.py  facebook_page.py  instagram_pro.py  registry.py  rss.py  telegram_connector.py  website.py  x_twitter.py  youtube.py
src/models/: __init__.py  base.py  content.py  goal.py  keyword.py  run_log.py  schedule.py  source.py
src/pipeline/: dedupe.py  normalize.py  runner.py  scorer.py  tagger.py
src/scheduler/: engine.py  jobs.py
src/utils/: hashing.py  http_client.py  rate_limiter.py  time_utils.py
tests/: conftest.py  test_crawl_simulator.py  test_hashing.py  test_http_client.py  test_rate_limiter.py  test_scale_simulation.py
(+64 files in other folders)
